--- a/landingp.html
+++ b/landingp.html
@@ -171,7 +171,7 @@
             <source src="video1.mp4" type="video/mp4">
         </video>
         <h1 class="intro-headline" id="intro-text">
-            See the hidden indicators driving the Yelahanka boom.
+            See the hidden indicators driving the Yelahanka boom
         </h1>
     </div>
 
