--- a/landingp.html
+++ b/landingp.html
@@ -340,7 +340,7 @@
                 
                 <div id="text-1" class="slide-text active">
                     <p class="metric-line">
-                        With <span class="metric-value">25.3%</span> growth in the region
+                        With <span class="metric-value">25.3%*</span> growth in the region
                     </p>
                     <h1>Missed Whitefield? <br>Don't miss Yelahanka.</h1>
                     <p class="description">
