--- a/landingp.html
+++ b/landingp.html
@@ -327,7 +327,7 @@
             <source src="video1.mp4" type="video/mp4">
         </video>
         <h1 class="intro-headline" id="intro-text">
-            See the hidden indicators driving the Yelahanka boom
+            See The Hidden Indicators Driving the Yelahanka Boom in our Free Home Buying Guide.
         </h1>
     </div>
 
@@ -344,7 +344,7 @@
                     </p>
                     <h1>Missed Whitefield? <br>Don't miss Yelahanka.</h1>
                     <p class="description">
-                        The same signals that triggered the Whitefield boom are flashing here. Don't miss out twice.
+                        The same signals that triggered the boom are flashing here. Don't miss out twice.
                     </p>
                 </div>
 
@@ -354,17 +354,17 @@
                     </p>
                     <h1>Seamless Connectivity <br>from Yelahanka.</h1>
                     <p class="description">
-                        Reach the airport, CBD, and major tech parks within just 30 minutes. 
+                        Reach the Airport, CBD, and major Tech Parks within just 30 minutes. 
                     </p>
                 </div>
 
                 <div id="text-3" class="slide-text">
                     <p class="metric-line">
-                        Adjacent to <span class="metric-value">1,320 Ac</span> GKVK Forest
+                        Adjacent to <span class="metric-value">1,320 Acre</span> GKVK Forest
                     </p>
                     <h1>You can't build fresh air. <br>So we built next to it.</h1>
                     <p class="description">
-                        Yelahanka borders one of the city's largest green lungs. A rare luxury in 2026.
+                        Yelahanka borders one of the city's largest green lungs. A rare Luxury.
                     </p>
                 </div>
 
@@ -374,7 +374,7 @@
                 <div class="progress-indicator">
                     <span id="curr-step">04</span>
                     <div class="progress-bar"><div class="progress-fill" id="prog-bar"></div></div>
-                    <span style="opacity: 0.5; font-size: 0.9em;">04</span>
+                    <span style="opacity: 0; font-size: 0.9em;">04</span>
                 </div>
                 <div class="nav-buttons">
                     <button class="nav-btn" id="prev-btn" onclick="moveSlide(-1)">
