--- a/landingp.html
+++ b/landingp.html
@@ -327,7 +327,7 @@
             <source src="video1.mp4" type="video/mp4">
         </video>
         <h1 class="intro-headline" id="intro-text">
-            See The Hidden Indicators Driving the Yelahanka Boom in our Free Home Buying Guide.
+            See The Hidden Indicators Driving The Yelahanka Boom in our Free Home Buying Guide.
         </h1>
     </div>
 
